<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    android:layout_gravity="center"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/primaryColor"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin" >
<LinearLayout 
          android:orientation="vertical"
         android:gravity="center"
         android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <ImageView  
        android:layout_gravity="center"
        android:background="@drawable/wtc"
        android:layout_width="105dp"
        android:layout_height="70dp"/>
     <TextView
         android:id="@+id/wtc_head_txt"
         android:textColor="@color/White"
         android:layout_marginBottom="15dp"  
         android:layout_marginTop="10dp"
         android:textSize="18dp"
         android:text="@string/wtc_txt"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    
</LinearLayout>


    <LinearLayout
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/signup_txt"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10sp"
            android:text="@string/signup_screen_sign_up_txt"
            android:textColor="@color/White"
            android:textStyle="normal"
             />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1" >
        </LinearLayout>

        <EditText
            android:id="@+id/editemailid"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:background="@drawable/border_with_shadow"

            android:drawablePadding="5sp"
            android:textSize="@dimen/edittext_textsize"
            android:hint="@string/signup_screen_emailid_hint"
            android:layout_marginBottom="5sp"
            android:inputType="text" />
        <EditText
            android:id="@+id/editusername"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginBottom="5sp"
            android:background="@drawable/border_with_shadow"

            android:textSize="@dimen/edittext_textsize"
            android:drawablePadding="5sp"
            android:maxLength="50"
            android:hint="@string/signup_screen_username_hint"
            android:inputType="text" />



        <EditText
              
            android:id="@+id/mobilenumber"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginBottom="5sp"
            android:background="@drawable/border_with_shadow"

            android:textSize="@dimen/edittext_textsize"
            android:drawablePadding="5sp"
            android:hint="@string/signup_screen_mobile_hint"
            android:inputType="number" />

        <EditText
              android:layout_marginBottom="5sp"
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:background="@drawable/border_with_shadow"

            android:textSize="@dimen/edittext_textsize"
            android:drawablePadding="5sp"
            android:hint="@string/signup_screen_password_hint"
            android:inputType="textPassword"
              />
       
        <EditText
            android:id="@+id/editconPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:background="@drawable/border_with_shadow"

            android:textSize="@dimen/edittext_textsize"
            android:drawablePadding="5sp"
            android:hint="@string/signup_screen_conf_password_hint"
            android:inputType="textPassword" />
        

        <Button
            android:id="@+id/signupbtn"
            style="@style/App_Button_Style"
            android:layout_width="match_parent"
            android:layout_marginTop="20sp"
            android:textStyle="bold"
            android:textSize="15dp"
            android:text="@string/signup_screen_submit_bt" />

        
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/cancel_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/forgotpassword_screen_cancel_txt"/>
    </LinearLayout>
</LinearLayout>
    </ScrollView>