<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/primaryColor"

    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/primaryColor"
    android:orientation="vertical"

    android:paddingTop="@dimen/activity_vertical_margin" >
    <LinearLayout
        android:layout_marginTop="10dp"
          android:orientation="vertical"
         android:gravity="center"
         android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_gravity="center"
            android:background="@drawable/wtc"
            android:layout_width="105dp"
            android:layout_height="70dp"/>
         <TextView
             android:id="@+id/wtc_head_txt"
             android:textColor="@color/White"
             android:layout_marginBottom="15dp"
             android:layout_marginTop="10dp"
             android:textSize="17dp"
             android:text="@string/wtc_txt"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="60dp"
        android:layout_weight="1"
         android:layout_gravity="center"
        android:gravity="center"
        android:background="@color/primaryColor"

        android:orientation="vertical" >

         <TextView
            android:id="@+id/forgot_pwd_head_txt"
            android:textColor="@color/White"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="10dp"
            android:textSize="22dp"
            android:text="@string/forgotpassword_screen_header_txt"
            android:layout_gravity="center"
             android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/editemail_forgot"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:background="@drawable/border_with_shadow"

            android:drawablePadding="5sp"
            android:textSize="@dimen/edittext_textsize"
            android:hint="Email ID"
            android:inputType="text" />

        <Button
            android:layout_marginTop="30dp"
            android:id="@+id/sendpass"
            android:layout_width="match_parent"
            android:layout_height="35sp"
            
            android:background="@drawable/border_button"
            android:text="SEND MY PASSWORD"
            android:padding="5dp"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="@color/White" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:orientation="vertical"
         >
        <TextView
            android:id="@+id/cancel_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:gravity="center"
            android:textSize="15dp"
            android:text="@string/forgotpassword_screen_cancel_txt"/>
    </LinearLayout>

</LinearLayout>
</ScrollView>